--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -49,7 +49,6 @@ body {
     top: 10px;
     left: 10px;
     font-size: 5em;
-    //color: rgba(238, 238, 238, 0.8);
     color: rgba(212, 175, 55, 0.8);
     font-weight: normal;
   }
@@ -64,6 +63,43 @@ body {
     color: rgba(212, 175, 55, 0.8);
     font-weight: normal;
   }
+}
+
+.pagination {
+  text-align: center;
+  padding: 1em;
+  cursor: default;
+}
+
+.pagination a, .pagination span {
+  padding: 0.2em 0.3em;
+}
+
+.pagination .disabled {
+  color: black;
+}
+
+.pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  background-color: #c5b358;
+  display: inline-block;
+  width: 1.4em;
+  height: 1.4em;
+  line-height: 1.5;
+  -moz-border-radius: 1em;
+  -webkit-border-radius: 1em;
+  border-radius: 1em;
+  text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px;
+}
+
+.pagination a {
+  text-decoration: none;
+  color: #cfb54b;
+}
+
+.pagination a:hover, .pagination a:focus {
+  text-decoration: underline;
 }
 
 @media (max-width: 640px) {
