Added tests for Quotes controller + little code improvements

--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <h1>Quotes</h1>
+  <%= link_to "Add new quote", new_quote_path %>
   <div class="row">
     <div class="container">
       <% @quotes.each do |quote| %>
