--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -4,9 +4,40 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,200italic);
 
 body {
-  background: #eee;
+  background: whitesmoke;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
+}
+
+a {
+  color: black;
+  font-size: large;
+  position: relative;
+  display: inline-block;
+  transition: .3s;
+  text-decoration: none;
+  &::after {
+    position: absolute;
+    bottom: .3em;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: goldenrod;
+    opacity: 0;
+    transition: .3s;
+  }
+  &:visited {
+    color: black;
+  }
+  &:hover {
+    &::after {
+      bottom: 0;
+      opacity: 1;
+      color: goldenrod;
+    }
+    color: goldenrod;
+  }
 }
 
 .container {
@@ -100,6 +131,74 @@ body {
 
 .pagination a:hover, .pagination a:focus {
   text-decoration: underline;
+}
+
+textarea {
+  text-align: center;
+  height: auto;
+  max-width: 600px;
+  color: goldenrod;
+  font-weight: 200;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 30px;
+  width: 100%;
+  background: #fff;
+  border-radius: 3px;
+  line-height: 2em;
+  border: none;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  -webkit-transition: height 2s ease;
+  -moz-transition: height 2s ease;
+  -o-transition: height 2s ease;
+  transition: height 2s ease;
+  resize: none;
+  &::-webkit-input-placeholder {
+    color: goldenrod;
+    text-align: center;
+  }
+  &:-moz-placeholder {
+    /* Firefox 18- */
+    color: goldenrod;
+    text-align: center;
+  }
+  &::-moz-placeholder {
+    /* Firefox 19+ */
+    color: goldenrod;
+    text-align: center;
+  }
+  &:-ms-input-placeholder {
+    color: goldenrod;
+    text-align: center;
+  }
+}
+
+#new-quote-button {
+  display: inline-block;
+  margin: 0;
+  padding: 0.75rem 1rem;
+  border: 1px;
+  border-radius: 0.317rem;
+  background-color: whitesmoke;
+  color: goldenrod;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-family: 'Source Sans Pro', sans-serif;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -webkit-font-smoothing: antialiased;
+  &:hover {
+    opacity: 0.85;
+
+  }
+  &:active {
+    box-shadow: inset 0 3px 4px hsla(0, 0%, 0%, 0.8);
+  }
+  &:focus {
+    outline-offset: -2px;
+  }
 }
 
 @media (max-width: 640px) {
