Little code improvements

--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -16,7 +16,9 @@
           <% end %>
 
           <div class="field">
-            <%= f.text_area :text, class: "form-control", placeholder: "Put your quote here and make it immortal" %>
+            <%= f.text_area :text, class: "form-control",
+                            id: "id-quote-text",
+                            placeholder: "Put your quote here and make it immortal" %>
           </div>
 
           <div class="actions">
